    set_package_var_long_by_name,
    set_package_var_float_by_name,
    set_package_var_double_by_name,
    set_package_var_object_by_name,
    get_package_var_byte_by_name,
    get_package_var_short_by_name,
    get_package_var_int_by_name,
    get_package_var_long_by_name,
    get_package_var_float_by_name,
    get_package_var_double_by_name,
    get_package_var_object_by_name,


0.0934 2021-03-29
  - add Add unsigned format for sprintf. %lu and %u.
  - fix msys2 t/ext fail bug.
  - fix spvmcc bug that if module name contain ::, compile fail.
0.0933 2021-02-10
  - Don't support old OpenBSD before 6.8.
0.0932 2021-02-08
  - spvmcc -I option module path order become top
0.0931 2021-02-06
  - SPVM::Config extra_compiler_flag related methods is removed
    because I want to use extra_compiler_flag for spvmcc --ccflags option for future
  - SPVM::Config extra_linker_flag related methods is removed
    because I want to use extra_linker_flag for spvmcc --lddlflags option for future
  - implement spvmcc -O option
  - add --ccflags option to spvmcc
  - add --lddlflags option to spvmcc
  - add -f or --force option to spvmcc to compile and link force
  - package part name must be start with lower case
    (Invalid package name example) Foo::bar
    because I want to use internal anon sub package name for this. Foo::anonsub_11_23
  - fix bug anon sub code is not precompile if package have precompile descriptor
  - exception message become more perlish
    (Exception Message Example)
    TestCase::OArray->basic called at t/default/lib/TestCase/OArray.spvm line 54
  - add [CompileError] to compile error message
0.0930 2021-01-28
  - remove subroutine precompile descriptor. SPVM become only support whole package precompile.
  - add SPVM::Builder::Exe again. This is more stable before SPVM::Builder::Exe because compiler and runtime and SPVM module sources is embeded to exe files directry.
  - add spvmcc again