@@ -249,6 +249,8 @@ SPVM_ENV* SPVM_API_create_env(SPVM_COMPILER* compiler) {
     SPVM_API_get_package_var_float_by_name,
     SPVM_API_get_package_var_double_by_name,
     SPVM_API_get_package_var_object_by_name,
+    SPVM_API_call_static_method_by_name,
+    SPVM_API_call_method_by_name,
   };
   
   SPVM_ENV* env = calloc(sizeof(env_init), 1);
@@ -285,6 +287,41 @@ SPVM_ENV* SPVM_API_create_env(SPVM_COMPILER* compiler) {
   env->object_header_byte_size = (void*)(intptr_t)object_header_byte_size;
   
   return env;
+}
+
+void SPVM_API_call_static_method_by_name(SPVM_ENV* env, const char* package_name, const char* sub_name, const char* signature, SPVM_VALUE* stack, int32_t* exception_flag, const char* file, int32_t line) {
+  *exception_flag = 0;
+
+  int32_t sub_id = env->get_sub_id(env, package_name, sub_name, signature);
+  if (sub_id < 0) {
+    env->die(env, "Static method not found, package name:%s, sub name:%s, signature:%s", package_name, sub_name, signature, file, line);
+    *exception_flag = 1;
+    return;
+  }
+  *exception_flag = env->call_sub(env, sub_id, stack);
+  if (*exception_flag) {
+    const char* message = env->get_chars(env, env->get_exception(env));
+    env->die(env, "%s", message, file, line);
+    return;
+  }
+}
+
+void SPVM_API_call_method_by_name(SPVM_ENV* env, SPVM_OBJECT* object, const char* sub_name, const char* signature, SPVM_VALUE* stack, int32_t* exception_flag, const char* file, int32_t line) {
+  *exception_flag = 0;
+
+  int32_t sub_id = env->get_method_sub_id(env, object, sub_name, signature);
+  if (sub_id < 0) {
+    env->die(env, "Method not found, object:%p, sub name:%s, signature:%s", object, sub_name, signature, file, line);
+    *exception_flag = 1;
+    return;
+  };
+  env->call_sub(env, sub_id, stack);
+  *exception_flag = env->call_sub(env, sub_id, stack);
+  if (*exception_flag) {
+    const char* message = env->get_chars(env, env->get_exception(env));
+    env->die(env, "%s", message, file, line);
+    return;
+  }
 }
 
 void* SPVM_API_new_object_by_name(SPVM_ENV* env, const char* package_name, int32_t* exception_flag, const char* file, int32_t line) {
