@@ -30,7 +30,8 @@
     get_package_var_float_by_name,
     get_package_var_double_by_name,
     get_package_var_object_by_name,
-
+    call_static_method_by_name,
+    call_method_by_name,
 
 0.0934 2021-03-29
   - add Add unsigned format for sprintf. %lu and %u.
